styles.scss
/* ... */
.GitbookContent {
  font-size: 0.9rem;

  h1 {
    font-size: 1.8em;
  }
  h2 {
    font-size: 1.65em;
  }
  h3 {
    font-size: 1.5em;
  }
  h4 {
    font-size: 1.25em;
  }
  img {
    max-width: 100%;
  }
  .mark {
    padding: 0;
    p {
      display: inline;
    }
  }

  table {
    width: 100%;
    margin-bottom: 1.5em;
    border-radius: 4px;
    border-collapse: collapse;
    overflow: hidden;

    thead {
      background-color: $dark;
      color: $white;

      th {
        padding: 0.5em 0.5em;
      }
    }

    tbody {
      tr {
        border-bottom: 1px solid #ddd;

        &:nth-child(even) {
          background-color: #f0f0f0;
        }

        td {
          padding: 0.5em 0.5em;
          p {
            margin: 0;
            a {
              p {
                // Note: This is because of two bugs:
                // - Gitbook markdown exposes raw HTML within cells (paragraphs)
                // - elm-markdown transforms all link node children as paragraphs
                display: inline;
              }
            }
          }
        }
      }
    }
  }
}

.Header {
  &Brand {
    padding: .25em 0;
    margin: .5em 0;
    &:hover {
      background-color: #f6f6f6;
    }
  }

  &Logo {
    width: 100px;
    height: auto;
    aspect-ratio: auto 166 / 150;
    padding-left: 5px;
  }

  &Navigation {
    @media screen and (width < $viewport-sm) {
      width: 100%;
    }
    a.nav-link {
      font-size: 14px;
      padding: 1rem;
      cursor: pointer;
      &:hover {
        background-color: #f6f6f6;
      }
      &.active {
        border-bottom: 2px solid $primary;
      }
    }
  }

  &Title {
    color: $text-dark;
    font-size: 1.25rem;
    font-weight: 700;
  }
}

.ImpactDefinition {
  border-left: .25em solid #6a6af4;
  padding-left: 2em;
  p {
    line-height: 24px;
    &:not(:last-child) {
      margin-bottom: 5px;
    }
  }
}

.ImpactSelector {
  @media screen and (width < $viewport-sm) {
    position: fixed;
    background-color: #fff;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1044; // a notch behind mobile navigation overlay

    select,
    button {
      border-radius: 0;
    }
  }
}

.IngredientFormWrapper {
  border-bottom: $list-group-border-width solid $list-group-border-color;
  display: grid;
  grid-gap: 5px 10px;
  grid-template-columns: 116px 1fr 1fr auto 120px 31px;
  grid-template-areas:
    "massInputWrapper ingredientSelector countrySelector    bioCheckbox        impactDisplay     ingredientDelete"
    ".                ingredientBonuses  ingredientBonuses  ingredientBonuses  ingredientBonuses .               "
    ".                .                  transportDistances transportDistances transportImpact   .               ";
  padding: $list-group-item-padding-y $list-group-item-padding-x;
  align-items: center;

  @media screen and (max-width: $viewport-md) {
    grid-template-columns: 90px 1fr 70px 31px;
    grid-template-areas:
      "massInputWrapper   ingredientSelector impactDisplay     impactDisplay"
      "countrySelector    countrySelector    bioCheckbox       ingredientDelete"
      "ingredientBonuses  ingredientBonuses  ingredientBonuses ingredientBonuses"
      "transportDistances transportDistances transportImpact   transportImpact";
  }

  &:last-child {
    border-bottom: 0;
  }
  .BioCheckbox {
    grid-area: bioCheckbox;
    input {
      margin-right: 5px;
    }
  }
  .CountrySelector {
    grid-area: countrySelector;
  }
  .ImpactDisplay {
    grid-area: impactDisplay;
  }
  .IngredientDelete {
    grid-area: ingredientDelete;
  }
  .IngredientSelector {
    grid-area: ingredientSelector;
  }
  .IngredientTransportDistances {
    grid-area: transportDistances;
  }
  .IngredientTransportImpact {
    grid-area: transportImpact;
  }
  .MassInputWrapper {
    grid-area: massInputWrapper;
    min-width: 90px;
    max-width: 116px;
  }
  .IngredientBonuses {
    grid-area: ingredientBonuses;

    .IngredientBonus {
      display: grid;
      margin-top: 4px;
      grid-gap: 0 12px;
      grid-template-columns: 1fr 7fr 1fr 1fr;
      grid-template-areas:
        "BonusName BonusRange BonusValue BonusImpact";

      @media screen and (max-width: $viewport-md) {
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-areas:
          "BonusName  BonusName  BonusImpact BonusImpact"
          "BonusRange BonusRange BonusRange  BonusValue";
      }

      .BonusName {
        grid-area: BonusName;
        min-width: 120px;
        padding-left: 12px;
      }
      .BonusRange {
        grid-area: BonusRange;
      }
      .BonusValue {
        grid-area: BonusValue;
        min-width: 70px;
      }
      .BonusImpact {
        grid-area: BonusImpact;
        min-width: 120px;
      }
    }
  }
}

.IngredientPlaneOrBoatSelector {
  input[type=radio] {
    display: none;
  }
  label > i {
    border: 1px solid var(--bs-primary);
    border-radius: 4px;
    color: var(--bs-primary);
    cursor: pointer;
    padding: 4px 7px;
    transition: background-color 0.5s, color 0.5s;

    .icon-snow {
      left: 2px;
      top: 2px;
    }
  }

  input[type=radio] ~ i {
    background-color: var(--bs-white);
    color: var(--bs-primary);
  }

  input[type=radio]:checked ~ i {
    background-color: var(--bs-primary);
    color: var(--bs-white);
  }

  .PlaneSelector > i {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .BoatSelector > i {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.Launcher {
  &Link {
    border-top: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-left: 1px solid #ddd;
    box-shadow: 0 4px 0 0 $primary;
    width: 200px;
    min-width: 200px;
    height: 196px;
    min-height: 196px;
    &:hover {
      background-color: #f6f6f6;
    }
  }
}
/* ... */

